--- a/Course Data Analyzer/nbproject/project.properties
+++ b/Course Data Analyzer/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=course.data.analyzer.CourseDataAnalyzer
+main.class=course.data.analyzer.UIManager
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
