--- a/Course Data Analyzer/nbproject/project.properties
+++ b/Course Data Analyzer/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Course Data Analyzer
+application.vendor=InanEvin
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,11 +27,15 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Course_Data_Analyzer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.KGradientPanel.jar=C:\\Users\\InanEvin\\Desktop\\KGradientPanel.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.KGradientPanel.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
