--- a/Course Data Analyzer/nbproject/project.properties
+++ b/Course Data Analyzer/nbproject/project.properties
@@ -29,13 +29,51 @@ dist.jar=${dist.dir}/Course_Data_Analyzer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.activation-1.1.1.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\lib\\activation-1.1.1.jar
+file.reference.commons-codec-1.11.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\lib\\commons-codec-1.11.jar
+file.reference.commons-collections4-4.2.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\lib\\commons-collections4-4.2.jar
+file.reference.commons-compress-1.18.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\lib\\commons-compress-1.18.jar
+file.reference.commons-logging-1.2.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\lib\\commons-logging-1.2.jar
+file.reference.commons-math3-3.6.1.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\lib\\commons-math3-3.6.1.jar
+file.reference.curvesapi-1.05.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\ooxml-lib\\curvesapi-1.05.jar
+file.reference.jaxb-api-2.3.0.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\lib\\jaxb-api-2.3.0.jar
+file.reference.jaxb-core-2.3.0.1.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\lib\\jaxb-core-2.3.0.1.jar
+file.reference.jaxb-impl-2.3.0.1.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\lib\\jaxb-impl-2.3.0.1.jar
+file.reference.junit-4.12.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\lib\\junit-4.12.jar
 file.reference.KGradientPanel.jar=C:\\Users\\InanEvin\\Desktop\\KGradientPanel.jar
+file.reference.log4j-1.2.17.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\lib\\log4j-1.2.17.jar
+file.reference.poi-4.0.1.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\poi-4.0.1.jar
+file.reference.poi-examples-4.0.1.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\poi-examples-4.0.1.jar
+file.reference.poi-excelant-4.0.1.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\poi-excelant-4.0.1.jar
+file.reference.poi-ooxml-4.0.1.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\poi-ooxml-4.0.1.jar
+file.reference.poi-ooxml-schemas-4.0.1.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\poi-ooxml-schemas-4.0.1.jar
+file.reference.poi-scratchpad-4.0.1.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\poi-scratchpad-4.0.1.jar
+file.reference.xmlbeans-3.0.2.jar=C:\\Users\\InanEvin\\Desktop\\poi-bin-4.0.1-20181203\\poi-4.0.1\\ooxml-lib\\xmlbeans-3.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${libs.beans-binding.classpath}:\
-    ${file.reference.KGradientPanel.jar}
+    ${file.reference.KGradientPanel.jar}:\
+    ${file.reference.poi-4.0.1.jar}:\
+    ${file.reference.poi-examples-4.0.1.jar}:\
+    ${file.reference.poi-excelant-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
+    ${file.reference.poi-scratchpad-4.0.1.jar}:\
+    ${file.reference.curvesapi-1.05.jar}:\
+    ${file.reference.xmlbeans-3.0.2.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.commons-compress-1.18.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.commons-math3-3.6.1.jar}:\
+    ${file.reference.jaxb-api-2.3.0.jar}:\
+    ${file.reference.jaxb-core-2.3.0.1.jar}:\
+    ${file.reference.jaxb-impl-2.3.0.1.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.log4j-1.2.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
