--- a/Course Data Analyzer/nbproject/project.properties
+++ b/Course Data Analyzer/nbproject/project.properties
@@ -17,6 +17,8 @@ file.reference.poi-excelant-4.0.1.jar=poi-bin-4.0.1-20181203/poi-4.0.1/poi-excel
 file.reference.poi-ooxml-4.0.1.jar=poi-bin-4.0.1-20181203/poi-4.0.1/poi-ooxml-4.0.1.jar
 file.reference.poi-ooxml-schemas-4.0.1.jar=poi-bin-4.0.1-20181203/poi-4.0.1/poi-ooxml-schemas-4.0.1.jar
 file.reference.poi-scratchpad-4.0.1.jar=poi-bin-4.0.1-20181203/poi-4.0.1/poi-scratchpad-4.0.1.jar
+file.reference.xchart-3.5.2.jar=Resources/xchart/xchart-3.5.2.jar
+file.reference.xchart-demo-3.5.2.jar=Resources/xchart/xchart-demo-3.5.2.jar
 file.reference.xmlbeans-3.0.2.jar=poi-bin-4.0.1-20181203/poi-4.0.1/ooxml-lib/xmlbeans-3.0.2.jar
 #Sun Dec 23 03:14:36 EET 2018
 javadoc.splitindex=true
@@ -82,7 +84,9 @@ javac.classpath=\
     ${file.reference.jaxb-core-2.3.0.1.jar}:\
     ${file.reference.jaxb-impl-2.3.0.1.jar}:\
     ${file.reference.junit-4.12.jar}:\
-    ${file.reference.log4j-1.2.17.jar}
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.xchart-3.5.2.jar}:\
+    ${file.reference.xchart-demo-3.5.2.jar}
 javadoc.noindex=false
 annotation.processing.enabled.in.editor=false
 javadoc.private=false
